fix(landing): logo overflow on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -35,6 +35,7 @@ a {
     text-decoration: underline;
 }
 .logo {
+    width: 100%;
     text-align: center;
     padding: 40px;
     height: auto;
